<resources>
    <string name="app_name">XeroScouter Collect</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="defensive">Defensive?</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="default_text_0">0</string>
    <string name="bunnies_picked_up">Bunnies Picked-up</string>
    <string name="bunnies_stolen">Bunnies Stolen</string>
    <string name="auto_bunnies_picked_up">Auto Bunnies Picked-Up</string>
    <string name="auto_bunnies_scored">Auto Bunnies Scored</string>
    <string name="auto_lines_crossed">Auto Lines Crossed</string>
    <string name="bunnies_deposited">Bunnies Deposited</string>
    <string name="lines_crossed">Lines Crossed</string>
    <string name="shots_missed">Shots Missed</string>
    <string name="shots_hit">Shots Hit</string>
    <string name="finish">Finish</string>
    <string name="lbl_tablet_id">Tablet ID:</string>
    <string name="lbl_welcome_message">Welcome</string>
    <string name="btn_start_stand_scouting">Stand Scouting</string>
    <string name="btn_start_pit_scouting">Pit Scouting</string>
    <string name="lbl_tablet_id_match_confirmation">Tablet ID:</string>
    <string name="btn_climb_timer_start">Start Climb Timer</string>
    <string name="btn_climb_timer_reset">Reset Climb Timer</string>
    <string name="btn_climb_success">Climb Successful</string>
    <string name="btn_climb_failed">Climb Failed!</string>

    <string name="match_prompt">Choose a match</string>
    <string name="team_prompt">Choose a team</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="team_3">Team 3</string>
    <string name="team_4">Team 4</string>
    <string name="team_5">Team 5</string>
    <string name="team_6">Team 6</string>
    <string name="confirmation">Confirmation</string>
    <string name="match_list">Match List</string>
    <string name="import_to_tablet">Import to Tablet</string>
    <string name="export_from_tablet">Export from Tablet</string>
    <string name="reset_local_test_data">Reset Local Test Data</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="user_status">Status: Disconnected</string>
    <string name="lbl_event_name">Event:</string>
    <string name="string_event_name">Event ID</string>
    <string name="string_tablet_id">Tablet ID:</string>
    <string name="string_set_tablet_id">Set Tablet ID</string>
    <string name="default_pref_value">*</string>
    <string name="manage_db">Manage DB</string>
    <string name="manual_selection">Manual Selection</string>
    <string name="string_set_manual_selection">Set Manual Selection</string>
    <string name="tablet_uuid">Tablet UUID</string>
    <string name="set_tablet_uuid">Tablet UUID</string>
    <string name="no_app_handling_ftp_available">No app handling ftp available.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ckbox_entry_field_1">C++</string>
    <string name="ckbox_entry_field_2">Java</string>
    <string name="ckbox_entry_field_3">LabView</string>
    <string name="ckbox_entry_field_4">Other:</string>


</resources>
